--- a/index.html
+++ b/index.html
@@ -3,27 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Dynamic Time Greeting</title>
     <!-- Load Bootstrap 5 CSS -->
 </head>
 <body>
         <!-- MORNING: 5:00 AM to 11:59 AM (Hours 5-11) -->
         <!-- Start hidden using Bootstrap's d-none class -->
-
+        
+       <div class="full-screen-container .d-none">
+                    <div class="circle fade-rise-animation"></div>
+                    <h1 class="bottom-center pulsating-text">Good Morning!</h1>
+        </div>
 
 
   
         <!-- AFTERNOON: 12:00 PM to 5:59 PM (Hours 12-17) -->
         <!-- Start hidden using Bootstrap's d-none class -->
+        <div class="full-screen-container d-none">
+                    <div class="circle bouncy"></div>
+                    <h1 class="bottom-center pulsating-text">Good Afternoon!</h1>
+        </div>
 
 
   
 
         <!-- NIGHT: 6:00 PM to 4:59 AM (Hours 18-4) -->
         <!-- Start hidden using Bootstrap's d-none class -->
+        <div class="full-screen-container d-none">
+                    <div class="circle fade-in-element"></div>
+                    <h1 class="bottom-center pulsating-text">Good Night!</h1>
+        </div>
 
 
-
-  
+  <script src="js/greetings.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
