--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <!-- MORNING: 5:00 AM to 11:59 AM (Hours 5-11) -->
         <!-- Start hidden using Bootstrap's d-none class -->
         
-       <div id="morning-container" class="full-screen-container d-none">
-                    <div class="circle fade-rise-animation"></div>
-                    <h1 id="demo" class="bottom-center pulsating-text">Good Morning!</h1>
+       <div class="full-screen-container morning">
+                    <div class="sun fade-rise-animation"></div>
+                    <h1 id="greeting-text" class="bottom-center pulsating-text">Good Morning!</h1>
         </div>
 
 
   
         <!-- AFTERNOON: 12:00 PM to 5:59 PM (Hours 12-17) -->
         <!-- Start hidden using Bootstrap's d-none class -->
-        <div id="afternoon-container"  class="full-screen-container d-none">
-                    <div class="circle bouncy"></div>
-                    <h1 id="demo" class="bottom-center pulsating-text">Good Afternoon!</h1>
+        <div class="full-screen-container afternoon">
+                    <div class="hot bouncy"></div>
+                    <h1 id="greeting-text" class="bottom-center pulsating-text">Good Afternoon!</h1>
         </div>
 
 
@@ -31,9 +31,9 @@
 
         <!-- NIGHT: 6:00 PM to 4:59 AM (Hours 18-4) -->
         <!-- Start hidden using Bootstrap's d-none class -->
-        <div id="night-container"  class="full-screen-container d-none">
-                    <div class="circle fade-in-element"></div>
-                    <h1 id="demo" class="bottom-center pulsating-text">Good Night!</h1>
+        <div class="full-screen-container night">
+                    <div class="moon fade-in-element"></div>
+                    <h1 id="greeting-text" class="bottom-center pulsating-text">Good Night!</h1>
         </div>
 
 
